fixed index page on small screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -62,6 +62,18 @@ hr {
     margin-top: 200px; 
 }
 
+@media (max-width: 575px) {
+    .name-container {
+        margin-top: 150px;
+    }
+}
+
+@media (max-width: 400px) {
+    .name-container {
+        margin-top: 100px;
+    }
+}
+
 .name-container h1 {
     font-size: 4rem;
 }
@@ -362,8 +374,6 @@ hr {
         opacity: 1;
     }
 }
-
-
 
 /* ---- GENERAL CLASSES ----- */
 .hidden {
